Updating Guide Application to use PushConfig(URI, String) constructor